// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loadFile should fail for file with invalid JSON structure 1`] = `"Unexpected non-whitespace character after JSON at position 6"`;

exports[`loadFile should fail for file with invalid entry 1`] = `
"[
  {
    "code": "invalid_type",
    "expected": "number",
    "received": "string",
    "path": [
      1,
      "runs"
    ],
    "message": "Expected number, received string"
  },
  {
    "code": "invalid_type",
    "expected": "number",
    "received": "undefined",
    "path": [
      1,
      "meanDuration"
    ],
    "message": "Required"
  }
]"
`;

exports[`loadFile should load results file with header 1`] = `
{
  "entries": {
    "Async Component": {
      "counts": [
        7,
        7,
        7,
        7,
        7,
        7,
        7,
        7,
        7,
        7,
      ],
      "durations": [
        160,
        158,
        158,
        155,
        153,
        150,
        149,
        145,
        144,
        136,
      ],
      "meanCount": 7,
      "meanDuration": 150.8,
      "name": "Async Component",
      "runs": 10,
      "stdevCount": 0,
      "stdevDuration": 7.554248252914823,
      "type": "render",
    },
    "Other Component 10": {
      "counts": [
        4,
        4,
        4,
        4,
        4,
        4,
        4,
        4,
        4,
        4,
      ],
      "durations": [
        100,
        97,
        95,
        94,
        94,
        94,
        93,
        90,
        86,
        84,
      ],
      "meanCount": 4,
      "meanDuration": 92.7,
      "name": "Other Component 10",
      "runs": 10,
      "stdevCount": 0,
      "stdevDuration": 4.831608887776871,
      "type": "render",
    },
    "Other Component 10 legacy scenario": {
      "counts": [
        4,
        4,
        4,
        4,
        4,
        4,
        4,
        4,
        4,
        4,
      ],
      "durations": [
        97,
        96,
        94,
        92,
        91,
        91,
        88,
        88,
        85,
        83,
      ],
      "meanCount": 4,
      "meanDuration": 90.5,
      "name": "Other Component 10 legacy scenario",
      "runs": 10,
      "stdevCount": 0,
      "stdevDuration": 4.552166761249221,
      "type": "render",
    },
    "Other Component 20": {
      "counts": [
        4,
        4,
        4,
        4,
        4,
        4,
        4,
        4,
        4,
        4,
        4,
        4,
        4,
        4,
        4,
        4,
        4,
        4,
        4,
        4,
      ],
      "durations": [
        99,
        99,
        98,
        98,
        96,
        95,
        94,
        93,
        93,
        93,
        93,
        92,
        90,
        90,
        89,
        88,
        88,
        87,
        87,
        82,
      ],
      "meanCount": 4,
      "meanDuration": 92.2,
      "name": "Other Component 20",
      "runs": 20,
      "stdevCount": 0,
      "stdevDuration": 4.595191995301633,
      "type": "render",
    },
    "fib 30": {
      "counts": [
        1,
        1,
        1,
        1,
        1,
        1,
        1,
        1,
        1,
        1,
      ],
      "durations": [
        80,
        80,
        80,
        80,
        80,
        79,
        79,
        79,
        79,
        79,
      ],
      "meanCount": 1,
      "meanDuration": 79.9,
      "name": "fib 30",
      "runs": 10,
      "stdevCount": 0,
      "stdevDuration": 0.4532780026900862,
      "type": "syncFunction",
    },
  },
  "metadata": {
    "branch": "feat/perf-file-validation",
    "commitHash": "991427a413b1ff05497a881287c9ddcba7b8de54",
  },
}
`;

exports[`loadFile should load results file without header 1`] = `
{
  "entries": {
    "Async Component": {
      "counts": [
        7,
        7,
        7,
        7,
        7,
        7,
        7,
        7,
        7,
        7,
      ],
      "durations": [
        160,
        158,
        158,
        155,
        153,
        150,
        149,
        145,
        144,
        136,
      ],
      "meanCount": 7,
      "meanDuration": 150.8,
      "name": "Async Component",
      "runs": 10,
      "stdevCount": 0,
      "stdevDuration": 7.554248252914823,
      "type": "render",
    },
    "Other Component 10": {
      "counts": [
        4,
        4,
        4,
        4,
        4,
        4,
        4,
        4,
        4,
        4,
      ],
      "durations": [
        100,
        97,
        95,
        94,
        94,
        94,
        93,
        90,
        86,
        84,
      ],
      "meanCount": 4,
      "meanDuration": 92.7,
      "name": "Other Component 10",
      "runs": 10,
      "stdevCount": 0,
      "stdevDuration": 4.831608887776871,
      "type": "render",
    },
    "Other Component 10 legacy scenario": {
      "counts": [
        4,
        4,
        4,
        4,
        4,
        4,
        4,
        4,
        4,
        4,
      ],
      "durations": [
        97,
        96,
        94,
        92,
        91,
        91,
        88,
        88,
        85,
        83,
      ],
      "meanCount": 4,
      "meanDuration": 90.5,
      "name": "Other Component 10 legacy scenario",
      "runs": 10,
      "stdevCount": 0,
      "stdevDuration": 4.552166761249221,
      "type": "render",
    },
    "Other Component 20": {
      "counts": [
        4,
        4,
        4,
        4,
        4,
        4,
        4,
        4,
        4,
        4,
        4,
        4,
        4,
        4,
        4,
        4,
        4,
        4,
        4,
        4,
      ],
      "durations": [
        99,
        99,
        98,
        98,
        96,
        95,
        94,
        93,
        93,
        93,
        93,
        92,
        90,
        90,
        89,
        88,
        88,
        87,
        87,
        82,
      ],
      "meanCount": 4,
      "meanDuration": 92.2,
      "name": "Other Component 20",
      "runs": 20,
      "stdevCount": 0,
      "stdevDuration": 4.595191995301633,
      "type": "render",
    },
    "fib 30": {
      "counts": [
        1,
        1,
        1,
        1,
        1,
        1,
        1,
        1,
        1,
        1,
      ],
      "durations": [
        80,
        80,
        80,
        80,
        80,
        79,
        79,
        79,
        79,
        79,
      ],
      "meanCount": 1,
      "meanDuration": 79.9,
      "name": "fib 30",
      "runs": 10,
      "stdevCount": 0,
      "stdevDuration": 0.4532780026900862,
      "type": "syncFunction",
    },
  },
  "metadata": undefined,
}
`;
